<resources>
    <string name="app_name">Blast</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!--Navigation Drawer strings-->
    <string name="navigation_inbox_item">Inbox</string>
    <string name="navigation_event_item">Events</string>
    <string name="navigation_reminder_item">Reminders</string>
    <string name="navigation_group_item">Groups</string>
    <string name="navigation_contact_item">Contacts</string>
    <string name="navigation_settings_item">Settings</string>
    <string name="navigation_help_item">Help/Feedback</string>

    <!--Drawer Stuff-->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!--Dialog Strings-->
    <string name="dialog_new_group">New Group</string>
    <string name="dialog_rename_group">Rename Group</string>
    <string name="dialog_new_note">New Note</string>
    <string name="dialog_done">Done</string>
    <string name="dialog_cancel">Cancel</string>

    <!--Action Button Strings-->
    <string name="add_group">Add Group</string>
    <string name="invites">Invites</string>

    <string name="find_groups">Find Groups</string>

    <string name="settings">Settings</string>
    <string name="contacts">Contacts</string>
    <string name="help">Help</string>
    <string name="groups">Groups</string>
    <string name="events">Events</string>
    <string name="reminders">Reminders</string>

    <string name="options">Options</string>

    <!--Menu Options-->
    <string name="menu_people">People &amp; Options</string>
    <string name="menu_archive">Archive</string>
    <string name="menu_delete">Delete</string>

    <string name="group_name">Group Name</string>
    <string name="notifications">Notifications</string>

    <!--GCM-->
    <string name="PROJECT_ID">732247720107</string>
    <string name="scope">Public</string>

    <!--Inviting-->
    <string name="invite">Invite People</string>

    <!--Error Messages-->
    <string name="pick_account">You must pick an account to log in</string>
</resources>