<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/menu_navigation">

    <item android:id="@+id/group_messages"
        android:title="Blasts">
        <menu>
            <item
                android:id="@+id/navigation_inbox_item"
                android:icon="@mipmap/ic_inbox_white_24dp"
                android:title="@string/navigation_inbox_item"/>
            <item
                android:id="@+id/navigation_event_item"
                android:icon="@mipmap/ic_event_black_24dp"
                android:title="@string/navigation_event_item"/>
            <item
                android:id="@+id/navigation_reminder_item"
                android:icon="@mipmap/ic_reminder_black"
                android:title="@string/navigation_reminder_item"/>
        </menu>
    </item>

    <item android:id="@+id/group_people"
        android:title="People">
        <menu>
             <item
                android:id="@+id/navigation_group_item"
                android:icon="@mipmap/ic_group_black_24dp"
                android:title="@string/navigation_group_item"/>
            <item
                android:id="@+id/navigation_contact_item"
                android:icon="@mipmap/ic_contacts_black_24dp"
                android:title="@string/navigation_contact_item"/>
        </menu>
    </item>

    <item android:id="@+id/group_help"
        android:title="Support">
        <menu>
            <item
                android:id="@+id/navigation_settings_item"
                android:icon="@mipmap/ic_settings_black_24dp"
                android:title="@string/navigation_settings_item"/>
            <item
                android:id="@+id/navigation_help_item"
                android:icon="@mipmap/ic_help_black_24dp"
                android:title="@string/navigation_help_item"/>
        </menu>
    </item>
</menu>